tpm and texlive

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,3 +49,9 @@ bind -n C-j if-shell "$is_vim" "send_keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send_keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send_keys C-l" "select-pane -R"
 bind -n C-\\ if-shell "$is_vim" "send_keys C-\\" "select-pane -l"
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'laktak/extrakto'
+
+run -b "$XDG_CONFIG_HOME/tmux/plugins/tpm/tpm"
