--- a/i3/config
+++ b/i3/config
@@ -313,3 +313,5 @@ bindsym Ctrl+BackSpace exec dunstctl history-pop
 
 # Remap Caps Lock key when external keyboard is plugged
 bindsym $mod+z exec "setxkbmap -option 'caps:ctrl_modifier';xcape -e 'Caps_Lock=Escape' &"
+
+exec --no-startup-id ~/.screenlayout/monitor.sh
